--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "board-game",
   "description": "Demo of how to build an app using marko-starter",
   "version": "1.0.0",
+  "static-repo": "git@github.com:erikatakahara/board-game.git#gh-pages",
+  "baseurl": "/board-game",
   "dependencies": {
     "marko": "^4.13.10",
     "marko-starter": "^2.0.4"
